# aws-lambda-rust-hello-word

./: Cargo.toml  LICENSE  template.yml  workaround.yaml
.github/workflows/: sam-pipeline.yml
src/: main.rs
testing/: test.http
