[package]
name = "aws-lambda-rust-hello-word"
version = "0.1.0"
edition = "2021"
authors = ["demius.md@gmail.com"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.7"
lambda_runtime_errors = "0.1"
lambda_http = "0.7"

aws-config = "0.52"

http = "0.2"

# We are using the Amazon Simple Storage Service (Amazon S3) crate in this example,
# but you can use any SDK crate in your Lambda code.
aws-sdk-s3 = "0.22"

time = "0.3"
